Fixed AzArmorLayer for vanilla armor rendering. WIP on AzArmor rendering as it's being weird